# project

./: .env  pyproject.toml  requirements.txt
account/: admin.py  serializers.py  tasks.py
account/migrations/: 0001_initial.py
config/: __init__.py  celery.py  settings.py  urls.py
posts/: admin.py  models.py  serializers.py  tests.py  views.py
posts/migrations/: 0001_initial.py
review/: models.py  serializers.py  views.py
review/migrations/: 0001_initial.py  0002_comment.py
